# pipes-and-rust

./: .gitignore  Cargo.toml  LICENSE  Readme.md  build_pack.sh  build_push_run.sh
.github/workflows/: rust.yml
release/: install.sh  pipes-and-rust.service  uninstall.sh
res/: index.html
src/: main.rs
