[package]
name = "pipes-and-rust"
version = "1.1.0"
authors = ["simon <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "^0.9"
rust-embed = "^5.9"
simple-server = "^0.4"
byteorder = "^1.4"

[profile.release]
lto = true
codegen-units = 16
opt-level = 3
debug = false
