[package]
name = "pipes-and-rust"
version = "1.2.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
rust-embed = "6.3.0"
simple-server = "0.4.0"
byteorder = "1.4.3"

[profile.release]
lto = true
codegen-units = 16
opt-level = 3
debug = false
